# FlashTensor

./: .gitignore  .style.yapf  CMakeLists.txt  README.md  pyproject.toml  qiyuan_env.sh  rebuild.sh  yes_env.sh
bench/: attn.mlir  ea.mlir  h2o.mlir  keyformer.mlir  roco.mlir  sima.mlir
cases/: attn.py  attn_h2o.py  run.py
cases/kernels/: attn.py  corm.py  gemma2.py  h2o.py  kf.py  roco.py  snapkv.py
cmake/: QueryPythonForPybind11.cmake
ffi/: ffi.cpp  ffi.h  ir.cpp  passes.cpp
include/: CMakeLists.txt
include/asuka/Analysis/: Parallelism.h
include/asuka/Conversion/AsukaToAsukaTriton/: CMakeLists.txt  Passes.h  Passes.td
include/asuka/Dialect/: CMakeLists.txt
include/asuka/Dialect/Asuka/IR/: AsukaDialect.h  AsukaDialect.td  AsukaEnums.td  AsukaInterfaces.td  AsukaOps.td  AsukaTypes.h  AsukaTypes.td  CMakeLists.txt
include/asuka/Dialect/Asuka/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/asuka/Dialect/AsukaTriton/IR/: AsukaTritonDialect.h  AsukaTritonDialect.td  AsukaTritonOps.td  AsukaTritonTypes.h  AsukaTritonTypes.td  CMakeLists.txt
include/asuka/Dialect/AsukaTriton/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/asuka/Translate/: translate.h
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  Parallelism.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/AsukaToAsukaTriton/: AsukaToAsukaTritonPass.cpp  CMakeLists.txt
lib/Dialect/Asuka/IR/: AsukaOps.cpp  AsukaTypes.cpp  CMakeLists.txt
lib/Dialect/Asuka/Transforms/: AnnotateParallelism.cpp  BroadcastTransform.cpp  CMakeLists.txt  DynamicFor.cpp  EquivalentTransform.cpp  EraseTypeInKernel.cpp  LowerComplexReduce.cpp  MulScalarHoisting.cpp  Parallelize.cpp  PermuteHoisting.cpp  RecoverTypeInKernel.cpp  ReplaceExpAndLog.cpp  Simplify.cpp  Tiling.cpp  ToMask.cpp  UserReplicate.cpp
lib/Dialect/AsukaTriton/IR/: AsukaTritonOps.cpp  AsukaTritonTypes.cpp  CMakeLists.txt
lib/Dialect/AsukaTriton/Transforms/: CMakeLists.txt  SqueezeBlock.cpp  UserReplicate.cpp
lib/Translate/: CMakeLists.txt  to_triton.cpp
python/asuka/: __init__.py  subgraph.py  translate.py  utils.py
python/asuka/backend/: builder.py
python/asuka/backend/tensorrt/: __init__.py  builder.py  utils.py
python/asuka/partition/: config.py  connected.py  kernel.py
python/asuka/transform/: __init__.py  common.py  fission.py  utils.py
script/: format.sh  llvm_build.sh  qiyuan_dep_build.sh
